--- a/readme
+++ b/readme
@@ -1,2 +1,37 @@
-<html><h1>IMPERIAL CODE</h1>
-<h2>SET UP:</h2></html>
+# Simplest+
+
+Simplest+ is an object-oriented programming language that combines the simplicity of Python while encouraging good programming practices through explicit data type declarations inspired by C++. This unique blend allows developers to write code in Simplest+ that is both straightforward and robust, fostering clean and maintainable software development.
+
+The name of the programming language is derived from the word "simplest,” which refers to the simple keywords and syntax offered by it. The plus “+” symbol is added so that the name is phonetically similar to C++ when spoken.
+
+# Command-line tool
+
+To use the command-line tool for Simplest+, run...
+
+```
+pip install .
+```
+
+Run a program
+
+```
+simp <file>
+```
+
+Run the command-line interface
+
+```
+simp
+```
+
+Run lexical
+
+```
+simp <file> -m lexical
+```
+
+Run syntax
+
+```
+simp <file> -m syntax
+```
